<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginBottom="@dimen/activity_vertical_margin"
	android:layout_marginLeft="@dimen/activity_horizontal_margin"
	android:layout_marginRight="@dimen/activity_horizontal_margin"
	android:layout_marginTop="@dimen/activity_vertical_margin"
	android:orientation="vertical">

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/contact_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_add_contact_name"
			android:inputType="textPersonName|textCapWords"
			android:maxLines="1" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_vertical_margin">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/contact_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_add_contact_number"
			android:inputType="phone" />
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/contact_save"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:onClick="handleClick"
		android:text="@string/hint_add_contact_save" />

</LinearLayout>

